<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="361dp"
        android:layout_height="559dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/etCodigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/etCodigo"
            android:inputType="number" />

        <EditText
            android:id="@+id/etDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/etDescripcion"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etPrecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/etPrecio"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/btRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="registrar"
            android:text="@string/btRegistrar"
            tools:text="@string/btRegistrar" />

        <Button
            android:id="@+id/btBuscar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="buscar"
            android:text="@string/btBuscar" />

        <Button
            android:id="@+id/btModificar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btModificar" />

        <Button
            android:id="@+id/btEliminar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btEliminar" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>